gap issue

--- a/src/css/top_sellers.css
+++ b/src/css/top_sellers.css
@@ -1,15 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-  }
-  .top_sellers-list{
-    list-style: none;
-  }
-
-  section{
-    display: flex;
-    justify-content: center;
-  }
 
   @media (min-width: 375px) {
     .top_sellers-container{
@@ -32,6 +20,7 @@
         letter-spacing: -0.6px;
         text-transform: uppercase;
         margin-top: 72px;
+        margin-bottom: 32px;
     }
 
     .top_sellers-header-span{
@@ -116,6 +105,15 @@
         display: none;
     }
 
+    .top_sellers-photo {
+        margin-bottom: 20px;
+    }
+
+    .top_sellers-paragraph {
+        margin-bottom: 20px;
+    }
+
+
   }
 
   @media (min-width: 768px) and (max-width: 1199px){
@@ -199,6 +197,14 @@
     .top_sellers-third-photo{
         display: none;
     }
+
+    .top_sellers-header {
+        margin-bottom: 50px;
+    }
+
+    .top_sellers-photo {
+        margin-bottom: 32px;
+    }
   }
 
   @media (min-width: 1200px){
@@ -212,7 +218,6 @@
 
     .top_sellers-gallery{
         display: flex;
-        gap: 16px;
         align-items: center;
         flex-direction: column;
         max-width: 704px;
@@ -224,6 +229,10 @@
         flex-basis: calc((100% - 16px) / 3);
         flex-direction: row;
         gap: 16px;
+    }
+
+    .top_sellers-header {
+        margin-bottom: 50px;
     }
 
 
@@ -293,5 +302,9 @@
         font-weight: 400;
         line-height: 18px; /* 128.571% */
         letter-spacing: -0.28px;
+    }
+
+    .top_sellers-photo {
+        margin-bottom: 32px;
     }
   }
